step-5: Add support for persistence via Anorm. Lots of changes in this   commit in that we add:   1) support for evolutions   2) support for using a database, NOTE: the step of updating the      application.conf was left out of the online docs on the 	 playframework.org site!   3) support for creating and deleting tasks in the database   4) support for calling the delete from the web page
  Additionally this commit adds the README

--- a/README
+++ b/README
@@ -1,4 +1,11 @@
-This is your new Play application
+ScalaTodoList
 =====================================
 
-This file will be packaged with your application, when using `play dist`.
+This project contains a completed version of the ScalaTodoList tutorial 
+found here: http://www.playframework.com/documentation/2.2.x/ScalaTodoList
+
+There are 5 steps each as a git tagged commit. So start with 
+    git checkout -f step-0
+which will checkout step-0, 
+    git checkout -f step-5 
+will checkout the completed tutorial. 
